Update styling on Act Day 1 to align other content; fix localStorage render on Objects

--- a/01-Class-Content/04-Web-APIs-dev/01-Activities/23-Ins_Local-Storage-Objects/assets/css/style.css
+++ b/01-Class-Content/04-Web-APIs-dev/01-Activities/23-Ins_Local-Storage-Objects/assets/css/style.css
@@ -11,7 +11,8 @@ body {
   color: #001b44;
 }
 
-h2 {
+h2,
+h3 {
   text-align: center;
 }
 
